--- a/templates/Women.html
+++ b/templates/Women.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <title> Home :: cooked_food</title>
+    <title> Lady's Wear</title>
 {% endblock %}
 
 {% block content %}
