--- a/templates/emoh.html
+++ b/templates/emoh.html
@@ -411,7 +411,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand">Food4All | ADMIN</a>
+            <a href="#" class="navbar-brand">Oja | ADMIN</a>
         </div>
 
         <div class="collapse navbar-collapse" id="storenav">
@@ -449,9 +449,6 @@
                 <li><a href="#">Shipping</a></li>
                 <li><a href="#">Terms & Conditions</a></li>
                 <li><a href="#">Faqs</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Online Shopping</a></li>
-
             </ul>
         </div>
         <div class="col-md-4 footer-grid">
