--- a/templates/provisions.html
+++ b/templates/provisions.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <title> Home :: Beverages</title>
+    <title> Provisions</title>
 {% endblock %}
 
 {% block content %}
