--- a/templates/raw_food.html
+++ b/templates/raw_food.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <title> Home :: Raw Food</title>
+    <title> Raw Food</title>
 {% endblock %}
 
 {% block content %}
