--- a/templates/snacks.html
+++ b/templates/snacks.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <title> Home :: snacks</title>
+    <title> Snacks & Drinks </title>
 {% endblock %}
 
 {% block content %}
