--- a/templates/Children.html
+++ b/templates/Children.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <title> Home :: cooked_food</title>
+    <title> Children Wear</title>
 {% endblock %}
 
 {% block content %}
