--- a/templates/Men.html
+++ b/templates/Men.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <title> Home :: cooked_food</title>
+    <title> Men Wears</title>
 {% endblock %}
 
 {% block content %}
