--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'mastertemplate.html' %}
 {% load static %}
 {% block head %}
-    <title> FoodStore :: Home </title>
+    <title> Oja :: Home </title>
 {% endblock %}
 {% block content %}
 
