--- a/templates/masterpage.html
+++ b/templates/masterpage.html
@@ -55,7 +55,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{% url 'home' %}" class="navbar-brand">Food4All</a>
+            <a href="{% url 'home' %}" class="navbar-brand">Oja</a>
         </div>
 
         <div class="collapse navbar-collapse" id="storenav">
