--- a/templates/Children.html
+++ b/templates/Children.html
@@ -22,7 +22,10 @@
                             <img src="{{ i.image.url }}" alt="pics"
                                  class="img-responsive img-hover" style="height: 150px;width: 200px;">
                         </div>
-                        <h5 id="t">{{ i.product_name }} </h5>
+                       <div class="row">
+                                    <h5 id="t" style="width: 110px;margin-left: 20px;">{{ i.product_name }} </h5>
+                                    <h6 id="t" style="width: 110px;margin-left: 20px;">{{ i.supplier }}</h6>
+                                </div>
                         <h5 id="t">#{{ i.price }} </h5>
                         <div class="row">
                             <div>
