--- a/templates/ms.html
+++ b/templates/ms.html
@@ -425,17 +425,27 @@
                     style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
                     <ol class="list-group-item" style="background-color: orange;">
                         <a href="{% url 'show_order' %}" style="background-color: orange;"><p
-                                style="color: white;font-size: 2em;font-family: 'Bodoni MT'"><span
-                                class="glyphicon glyphicon-check"></span> Show Orders</p></a>
+                                style="color: white;font-size: 1.5em;font-family: 'Bodoni MT'"><span
+                                class="glyphicon glyphicon-check"></span> SHOW ORDER </p></a>
                     </ol>
                     <ol class="list-group-item" style="background-color:  blueviolet;">
                         <a href="{% url 'add_product' %}"><p
-                                style="color: white;font-size: 2em;font-family: 'Bodoni MT'"><span
-                                class="glyphicon glyphicon-check"></span>Add Product</p></a>
+                                style="color: white;font-size: 1.5em;font-family: 'Bodoni MT'"><span
+                                class="glyphicon glyphicon-check"></span>ADD PRODUCTS </p></a>
+                    </ol>
+                    <ol class="list-group-item" style="background-color:  blueviolet;">
+                        <a href="{% url 'change' %}"><p
+                                style="color: white;font-size: 1.5em;font-family: 'Bodoni MT'"><span
+                                class="glyphicon glyphicon-check"></span>EDIT | DELETE</p></a>
+                    </ol>
+                    <ol class="list-group-item" style="background-color:  blueviolet;">
+                        <a href="#"><p
+                                style="color: white;font-size: 1.5em;font-family: 'Bodoni MT'"><span
+                                class="glyphicon glyphicon-check"></span>INCOME ANALYSIS</p></a>
                     </ol>
                     <ol class="list-group-item" style="background-color:   darkolivegreen;">
                         <a href="{% url 'comment' %}"><p
-                                style="color: white;font-size: 2em;font-family: 'Bodoni MT'"><span
+                                style="color: white;font-size: 1.5em;font-family: 'Bodoni MT'"><span
                                 class="glyphicon glyphicon-comment"></span>Comments</p></a>
                     </ol>
                 </ul>
