--- a/templates/change.html
+++ b/templates/change.html
@@ -20,6 +20,11 @@
         }
 
     </style>
+
+    <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+        <div class="w3-bar-item" style="text-align: center;color:white;">EDIT | DELETE</div>
+    </div>
+
     <div class="table-responsive">
         <table class="table con">
             <thead>
@@ -53,7 +58,8 @@
                         </a>
                     </td>
                     <td>
-                        <a type="button" class="w3-btn"href="{% url 'prod_del' o.id %}" id="{{ o.id }}" name="{{ o.id }}"
+                        <a type="button" class="w3-btn" href="{% url 'prod_del' o.id %}" id="{{ o.id }}"
+                           name="{{ o.id }}"
                            style="background-color: orange;">
                             Delete
                         </a>
