--- a/templates/Children.html
+++ b/templates/Children.html
@@ -12,43 +12,51 @@
             window.location.href = "/"
         </script>
     {% endif %}
+
+    <div class="container" style="margin-top:10px;">
+        <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+            <div class="w3-bar-item" style="text-align: center;color:white; font-size: 1.0em;"> CHILDREN WEARS</div>
+        </div>
+    </div>
+
     <div class="container" style="padding-top: 2%;">
-    <div class="row">
-        {% for i in sql1 %}
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="thumbnail">
-                            <img src="{{ i.image.url }}" alt="pics"
-                                 class="img-responsive img-hover" style="height: 150px;width: 200px;">
-                        </div>
-                       <div class="row">
-                                    <h5 id="t" style="width: 110px;margin-left: 20px;">{{ i.product_name }} </h5>
-                                    <h6 id="t" style="width: 110px;margin-left: 20px;">{{ i.supplier }}</h6>
+        <div class="row">
+            {% for i in sql1 %}
+                <div class="col-md-3">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="thumbnail">
+                                <img src="{{ i.image.url }}" alt="pics"
+                                     class="img-responsive img-hover" style="height: 150px;width: 200px;">
+                            </div>
+                            <div class="row">
+                                <h5 id="t" style="width: 110px;margin-left: 20px;">{{ i.product_name }} </h5>
+                                <h6 id="t" style="width: 110px;margin-left: 20px;">{{ i.supplier }}</h6>
+                            </div>
+                            <h5 id="t">#{{ i.price }} </h5>
+                            <div class="row">
+                                <div>
+                                    <div id="{{ i.id }}_csrf_holder">
+                                        {% csrf_token %}
+                                    </div>
+                                    <input id="{{ i.id }}_quantity" type="text" placeholder="QTY" name="Qty"
+                                           style="width: 110px;margin-left: 20px;"
+                                           required>
+                                    <script>
+                                        var div = document.getElementById("{{ i.id }}_csrf_holder");
+                                        var csrf = div.getElementsByTagName('input')[0].value;
+                                    </script>
+                                    <button id="{{ i.id }}" type="button" class="btn btn-circle w3-btn"
+                                            style="background-color: orange; color: black;"
+                                            onclick="add_to_cart(this.id, csrf, 'provision');">
+                                        <i class="glyphicon glyphicon-shopping-cart" style="color:white;"></i></button>
                                 </div>
-                        <h5 id="t">#{{ i.price }} </h5>
-                        <div class="row">
-                            <div>
-                                <div id="{{ i.id }}_csrf_holder">
-                                    {% csrf_token %}
-                                </div>
-                                <input id="{{ i.id }}_quantity" type="text" placeholder="QTY" name="Qty"
-                                       style="width: 110px;margin-left: 20px;"
-                                       required>
-                                <script>
-                                    var div = document.getElementById("{{ i.id }}_csrf_holder");
-                                    var csrf = div.getElementsByTagName('input')[0].value;
-                                </script>
-                                <button id="{{ i.id }}" type="button" class="btn btn-circle w3-btn" style="background-color: orange; color: black;"
-                                   onclick="add_to_cart(this.id, csrf, 'provision');">
-                                    <i class="glyphicon glyphicon-shopping-cart" style="color:white;"></i></button>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
 
+        </div>
     </div>
-</div>
 {% endblock %}
