--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -121,59 +121,17 @@
             </button>
             <a href="{% url 'index' %}" class="navbar-brand">FoodStore</a>
         </div>
-
-        {#        <div class="collapse navbar-collapse" id="storenav">#}
-        {#            <ul class="nav navbar-nav" style="margin-left: 20px ;">#}
-        {#                <li>#}
-        {#                <a href="" id="k"> GO SHOPPING!</a>#}
-        {##}
-        {#                    <div class="dropdown">#}
-        {#                        <button class="dropbtn">Categories<span class="caret"></span></button>#}
-        {#                        <div class="dropdown-content">#}
-        {#                            <a href="/shop/provisions/">PROVISION</a>#}
-        {#                            <a href="/shop/snacks/">SNACKS | DRINKS</a>#}
-        {#                            <a href="/shop/raw_food/">RAW FOOD</a>#}
-        {#                            <a href="/shop/cooked_food/">COOKED FOOD</a>#}
-        {#                            <a href="/shop/soup_ingredient/">SOUP INGREDIENT</a>#}
-        {#                        </div>#}
-        {#                    </div>#}
-        {#                </li>#}
-        {#                <li><a href="#contact" id="k" data-toggle="modal"><span class="glyphicon glyphicon-edit"></span>#}
-        {#                    Contact-Us</a>#}
-        {#                </li>#}
-        {#                <li><a href="#about" id="k" data-toggle="modal"><span#}
-        {#                        class="glyphicon glyphicon-folder-open"></span>#}
-        {#                    About-Us</a>#}
-        {#                </li>#}
-        {#                <li><a href="#faqx" id="k" data-toggle="modal"><span class="glyphicon glyphicon-pushpin"></span>#}
-        {#                    Faqx</a>#}
-        {#                </li>#}
-        {##}
-        {#            </ul>#}
-        {##}
-        {#            <ul class="nav navbar-nav navbar-right">#}
-        {#                <li>#}
-        {#                    <form class="searchg">#}
-        {#                        <div class="input-group">#}
-        {#                            <input type="text" class="form-control" placeholder="Search">#}
-        {#                            <div class="input-group-btn">#}
-        {#                                <button class="btn btn-default" type="submit">#}
-        {#                                    <i class="glyphicon glyphicon-search"></i>#}
-        {#                                </button>#}
-        {#                            </div>#}
-        {#                        </div>#}
-        {#                    </form>#}
-        {#                </li>#}
-        {#            </ul>#}
-        {##}
-        {#        </div>#}
     </div>
 </nav>
-<div class="container" style="padding-top: 2%;">
-    <div class="well well-sm">
-        <h3>Kindly check your ordered goods and proceed to payment portal</h3>
+
+<div class="container" style="margin-top:10px;">
+    <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+        <div class="w3-bar-item" style="text-align: center;color:white; font-size: 1.0em;"> Kindly input your location
+            for delivery
+        </div>
     </div>
 </div>
+
 <style>
     table, th, td {
         border: 1px solid black;
