--- a/templates/comment.html
+++ b/templates/comment.html
@@ -10,6 +10,11 @@
         }
 
     </style>
+
+    <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+        <div class="w3-bar-item" style="text-align: center;color:white;"> FEEDBACKS</div>
+    </div>
+
     <div class="table-responsive">
         <table class="table con">
             <thead>
@@ -18,18 +23,18 @@
                 <th>Subject</th>
                 <th>Email</th>
                 <th>Message</th>
-{#                <th>Show Message</th>#}
+                {#                <th>Show Message</th>#}
             </tr>
             </thead>
             <tbody>
             {% for i in comment %}
-            <tr>
-                <td>{{ i.id }}</td>
-                <td>{{ i.subject }}</td>
-                <td>{{ i.Email }}</td>
-                <td>{{ i.message }}</td>
-{#                <td><a class="btn btn-success w3-btn" href="#" style="background-color: darkolivegreen;">Show details</a> </td>#}
-            </tr>
+                <tr>
+                    <td>{{ i.id }}</td>
+                    <td>{{ i.subject }}</td>
+                    <td>{{ i.Email }}</td>
+                    <td>{{ i.message }}</td>
+                    {#                <td><a class="btn btn-success w3-btn" href="#" style="background-color: darkolivegreen;">Show details</a> </td>#}
+                </tr>
             {% endfor %}
             </tbody>
         </table>
