--- a/templates/provisions.html
+++ b/templates/provisions.html
@@ -12,6 +12,13 @@
             window.location.href = "/"
         </script>
     {% endif %}
+
+    <div class="container" style="margin-top:10px;">
+        <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+            <div class="w3-bar-item" style="text-align: center;color:white; font-size: 1.0em;"> PROVISIONS</div>
+        </div>
+    </div>
+
     <div class="container" style="padding-top: 2%;">
         <div class="row">
             {% for i in sql1 %}
@@ -23,9 +30,9 @@
                                      class="img-responsive img-hover" style="height: 150px;width: 200px;">
                             </div>
                             <div class="row">
-                                    <h5 id="t" style="width: 110px;margin-left: 20px;">{{ i.product_name }} </h5>
-                                    <h6 id="t" style="width: 110px;margin-left: 20px;">{{ i.supplier }}</h6>
-                                </div>
+                                <h5 id="t" style="width: 110px;margin-left: 20px;">{{ i.product_name }} </h5>
+                                <h6 id="t" style="width: 110px;margin-left: 20px;">{{ i.supplier }}</h6>
+                            </div>
                             <h5 id="t">#{{ i.price }} </h5>
                             <div class="row">
                                 <div>
