--- a/templates/raw_food.html
+++ b/templates/raw_food.html
@@ -19,6 +19,11 @@
             window.location.href = "/"
         </script>
     {% endif %}
+    <div class="container" style="margin-top:10px;">
+        <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+            <div class="w3-bar-item" style="text-align: center;color:white; font-size: 1.0em;"> RAW FOOD </div>
+        </div>
+    </div>
     <div class="container" style="padding-top: 2%;">
         <div class="row">
             {% for i in sql1 %}
