--- a/templates/show_order.html
+++ b/templates/show_order.html
@@ -10,6 +10,11 @@
         }
 
     </style>
+
+    <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
+        <div class="w3-bar-item" style="text-align: center;color:white;">SHOW ORDER PRODUCTS </div>
+    </div>
+
     <div class="table-responsive">
         <table class="table con">
             <thead>
