--- a/templates/mastertemplate.html
+++ b/templates/mastertemplate.html
@@ -235,21 +235,29 @@ top: 0; right: 0">{{ request.session.cart|length }}</span></i>
 <div class="footer" style="overflow-x: hidden;">
     <div class="container">
         <div class="col-md-4 footer-grid">
-            <h3>About Us</h3>
-            <p></p>
+            <h3> Hotlines </h3>
+            <ul>
+                <li><a href="#">Eunice : 08100828813 </a></li>
+                <li><a href="#">Rajah : 07060569963 </a></li>
+                <li><a href="#">Emizy : 08139572244 </a></li>
+
+            </ul>
+            <ul>
+                <li><a href="#"> Meet Developers </a></li>
+            </ul>
         </div>
         <div class="col-md-4 footer-grid ">
             <h3>Other portal</h3>
             <ul>
-                <li><a href="shipping.html">AAUAFORUM</a></li>
-                <li><a href="terms.html">ALUTA-PORTAL</a></li>
-                <li><a href="faqs.html">ARTICLES-PORTAL</a></li>
+                <li><a href="#">AAUAFORUM</a></li>
+                <li><a href="#">ALUTA-PORTAL</a></li>
+                <li><a href="#">ARTICLES-PORTAL</a></li>
             </ul>
         </div>
         <div class="col-md-4 footer-grid">
             <h3>Social Media</h3>
             <ul>
-                <li><a href="#">Facebok</a></li>
+                <li><a href="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Instagram</a></li>
 
@@ -257,7 +265,7 @@ top: 0; right: 0">{{ request.session.cart|length }}</span></i>
         </div>
         <div class="footer-bottom">
             <div class="copy-right">
-                <p> &copy; 2017 Oja. All Rights Reserved | Design by <a href=#">
+                <p> &copy; 2017 Oja. All Rights Reserved | Design by <a href="#">
                     EMIZY</a></p>
             </div>
         </div>
