--- a/templates/mastertemplate.html
+++ b/templates/mastertemplate.html
@@ -243,7 +243,7 @@ top: 0; right: 0">{{ request.session.cart|length }}</span></i>
 
             </ul>
             <ul>
-                <li><a href="#"> Meet Developers </a></li>
+                <li><a href="http://aauaforum.com/dev.php"> Meet Developers </a></li>
             </ul>
         </div>
         <div class="col-md-4 footer-grid ">
