--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
         <form class="form-inline" method="post" action="/search/">
             {% csrf_token %}
             <div class="form-group">
-                <input type="text" class="form-control" name="seach" placeholder="Enter Product name">
+                <input type="text" class="form-control" name="seach" placeholder="Enter Product name" required>
             </div>
             <button type="submit" class="btn btn-default">Search</button>
         </form>
