--- a/templates/index.html
+++ b/templates/index.html
@@ -208,7 +208,7 @@
             <div class="form-group">
                 <input type="text" class="form-control" name="seach" placeholder="Enter Product name" required>
             </div>
-            <button type="submit" class="btn btn-default">Search</button>
+            <button type="submit" class="btn w3-btn w3-hover-red w3-orange" style="background-color: orange;color:white;">Search</button>
         </form>
     </div>
 
