--- a/templates/index.html
+++ b/templates/index.html
@@ -58,9 +58,9 @@
                         <a href="/shop/cooked_food/" class="w3-bar-item w3-button">Cookwd Food</a>
                         <a href="/shop/raw_food/" class="w3-bar-item w3-button">Raw Food</a>
                         <a href="/shop/soup_ingredient/" class="w3-bar-item w3-button">Soup Ingredient</a>
-                        <a href="/shop/Men/" class="w3-bar-item w3-button">Men Wears</a>
-                        <a href="/shop/Women/" class="w3-bar-item w3-button">Women Wears</a>
-                        <a href="/shop/Children/" class="w3-bar-item w3-button">Children Wears</a>
+                        <a href="/wear/Men/" class="w3-bar-item w3-button">Men Wears</a>
+                        <a href="/wear/Women/" class="w3-bar-item w3-button">Women Wears</a>
+                        <a href="/wear/Children/" class="w3-bar-item w3-button">Children Wears</a>
                     </div>
                 </div>
 
