--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -119,12 +119,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{% url 'index' %}" class="navbar-brand">FoodStore</a>
+            <a href="{% url 'index' %}" class="navbar-brand">Oja</a>
         </div>
     </div>
 </nav>
 
-<div class="container" style="margin-top:10px;">
+<div class="container" style="margin-top:40px; margin-bottom: 20px">
     <div class="w3-bar w3-orange w3-border w3-border-white w3-round">
         <div class="w3-bar-item" style="text-align: center;color:white; font-size: 1.0em;"> Kindly input your location
             for delivery
