--- a/templates/mastertemplate.html
+++ b/templates/mastertemplate.html
@@ -128,6 +128,9 @@ top: 0; right: 0">{{ request.session.cart|length }}</span></i>
 
         <div class="collapse navbar-collapse" id="storenav">
             <ul class="nav navbar-nav" style="margin-left: 20px ;">
+                 <li><a href="/p/gas_refill/" id="k"><span class="glyphicon glyphicon-edit w3-hover-green"></span>
+                    Gas-Refill</a>
+                </li>
                 <li><a href="#contact" id="k" data-toggle="modal"><span class="glyphicon glyphicon-edit"></span>
                     Contact-Us</a>
                 </li>
