--- a/templates/raw_food.html
+++ b/templates/raw_food.html
@@ -53,7 +53,7 @@
                                     </script>
                                     <button id="{{ i.id }}" type="button" class="btn btn-circle w3-btn"
                                             style="background-color: orange; color: black;"
-                                            onclick="add_to_cart(this.id, csrf, 'provision');">
+                                            onclick="add_to_cart(this.id, csrf, 'product');">
                                         <i class="glyphicon glyphicon-shopping-cart" style="color:white;"></i></button>
                                 </div>
                             </div>
